--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ pages:
     - 'Development Concerns': 'calllog_development-concerns.md'
 - 'Data Archival':
     - 'Introduction': 'data_archival_introduction.md'
+    - 'Integration Use Cases and Concerns': 'data_archival_integration_use_cases.md'
 - 'Working with Messages': 'messages.md'
 - 'Making Calls': 'making_calls.md'
 - 'Conference Calling': 'conference.md'
