--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ pages:
 - 'Data Archival':
     - 'Introduction': 'data_archival_introduction.md'
     - 'Integration Use Cases and Concerns': 'data_archival_integration_use_cases.md'
+    - 'Data Locations':'data_archival_data_locations.md'
 - 'Working with Messages': 'messages.md'
 - 'Making Calls': 'making_calls.md'
 - 'Conference Calling': 'conference.md'
